# ChangeLog for app-misc/colordiff
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/colordiff/ChangeLog,v 1.104 2014/11/14 07:03:25 jlec Exp $

*colordiff-1.0.13-r1 (14 Nov 2014)

  14 Nov 2014; Justin Lecher <jlec@gentoo.org> colordiff-1.0.13.ebuild,
  +colordiff-1.0.13-r1.ebuild:
  Resolve blocker with dev-util/cdiff

  26 Oct 2013; Justin Lecher <jlec@gentoo.org> colordiff-1.0.13.ebuild:
  Add missing dep on perl, #489474

  21 Jul 2013; Jeroen Roovers <jer@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for HPPA too.

  23 Jan 2013; Justin Lecher <jlec@gentoo.org> -colordiff-1.0.10.ebuild,
  -colordiff-1.0.12.ebuild, metadata.xml:
  Drop old

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for x86, wrt bug #451650

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for sparc, wrt bug #451650

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for ia64, wrt bug #451650

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for alpha, wrt bug #451650

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for ppc64, wrt bug #451650

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13.ebuild:
  Stable for ppc, wrt bug #451650

  14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> colordiff-1.0.13.ebuild:
  Stable on arm, wrt bug #451650

  14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> colordiff-1.0.13.ebuild:
  Stable on amd64, wrt bug #451650

*colordiff-1.0.13 (01 Dec 2012)

  01 Dec 2012; Tim Harder <radhermit@gentoo.org> +colordiff-1.0.13.ebuild:
  Version bump.

*colordiff-1.0.12 (28 Oct 2012)

  28 Oct 2012; Tim Harder <radhermit@gentoo.org> +colordiff-1.0.12.ebuild:
  Version bump.

  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -colordiff-1.0.9.ebuild:
  Drop old
