@@ -1,27 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST colordiff-1.0.13.tar.gz 19960 SHA256 ce2805a130c81545711df94bc00a93545da3f323d835cc38b452d3396ef86c2a SHA512 8a47ea9e0c703d6b577a01e9a63df58233f752d4e72bb7f8213fcc076efcc52869df5e694126abbdc8a63816010786a577fa37ed3e175162dece3f17bd79fdda WHIRLPOOL 355d7ee12f37c19cf243bedff3d883ccd188da0e68c1531be932cec2d19055e67028cc5ca069f0bfe71d2c26538721989f13d1557d359338b534343b3c3faa4c
-EBUILD colordiff-1.0.13-r1.ebuild 1105 SHA256 4321e51216ddb2ecba35aa3533fc46c4ab9d810d6978b00acd2831fca819f305 SHA512 62ffb8c84195515c881b8343bd2b0ec4201370e8b4e4f36620212883ed5032ea22e1be6f2c22df6d77ec3801554c2f46bc3f823bf19cdf90cfb658746140bad9 WHIRLPOOL 27284c9aeb03e5d4d89187ec72b314647050098cb2674c0ebc42056df595d19d0b7d64b208410fab95dbab1b78c7c142d2e727bbc90294c863889e0f2c940262
+EBUILD colordiff-1.0.13-r1.ebuild 1103 SHA256 0a2527c27b09f5887f315979e08759faad1d450f0ff80f83379e655d63b6418a SHA512 218ad0618de9c68bb3dcbe72964c86482162446863a8a2a9b953aac12d86cc1f458ee19dc1ddde94db4ce67e6f25a5eb8a07ef95ba842426791e0ecdd6e9cfbf WHIRLPOOL 49994355c9b9e0da07907d0c76fecea0ed2d9c14521127ed24d034fbcbb9d75063eec97469bb9b3712d1fc5e0908edff0e74fc47590418c798da62beefd3eee2
 EBUILD colordiff-1.0.13.ebuild 1118 SHA256 a7351fc6a36ccec1dd4304296a837441257697529832b2937946e41f25eacde0 SHA512 8f660030468c35c336df596a6f8855b9e87460120ec49341e194046dda49ff4bd44a524b970515a127390aa8de8d63476ea80779984beafe442ca348acd583ec WHIRLPOOL 787728bf2f699dacf8a8689646a3557a5aaed73ac065d35ffe7a7d3c7fd6eba109d9080822fda44bd360ae9915ae2c75aa6b9d2e6ec70ede780f1e9c85211304
-MISC ChangeLog 13199 SHA256 b60d1693609223db0d9cba50c76f9bdb69298f5628c159828197902190916ae2 SHA512 f4831c8da368f5b3ba8a93e75c73734c35dc9b069e090caa0f462c338885da1487b8da70f0ed7c6c01676e3c13cafe401436f7be4e8c6b64c4101b7e04fe0741 WHIRLPOOL 3afbdfdac656acc5fa309d7c7b52c290be617428d960e52f7919c828caaeb1eec754771a6c5eba61904ba2aa83da63490bd2908262628727d0986e873267ef78
+MISC ChangeLog 13312 SHA256 1887109961ad8cf3b0868d87ac8c8f62d4b44d3c58611fadc92b6094672d44ea SHA512 6287bfd401fb1d12eba96d8dde9c3b1b32be76c574999e23951fac24630ced65ae6b2819fd12b5d1f07839ff3024e2d42f257e96d99b0af57e68ca87c5ac46d4 WHIRLPOOL 6824da91d722e8b3d5acd4e158406b458117194f3208f071511b4d83c2e8016c039313c1bc8adca56776af43f0d4b6de29f4ed2a5e8f23fb9f2e8751cab9ca8d
 MISC metadata.xml 166 SHA256 064eb80cc86913e2a47d1088f1b0ebd5b64b5dab1c73d38b8501cd77891cfbbf SHA512 3fc05bf28a906b223e9bb5baeac755dd7e4edb755b5a6c054c3e4d46d294f28df948e1195e71d5a836783daefafa53fe1417aacc0ba17dd49e9b10d51e99c275 WHIRLPOOL 814a3f6a650e4373ac90ba43969b8dab3215f5da936ef5e180fe134adc05a571dc1390c80be173797c421de7f22488b19979353f7aa52536bbfcf6e0541bf748
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJUZak9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirsFEP/jMdm3CRmS7mU7zhHmk5fVAi
-XAXM4iNDBrFEz4QOjB15X5vIp0ffTVqWJnfcmqkNfIBRplMx/pWCjRibP53iO6ka
-VdXaeyu+VEQULZwL/A+0miA0SfGFb+wv8eh1y9WcRI23dGw6bLNya8fNgoSYfOwO
-tRN5QHf5EbzmfNjEo1FIxVg9Nn/hXqzGLZGBOdZ+HGLnCm+/+8zj4WUeomogAC2R
-CksQG1B9nin0520B3Wrjy8WotgpWV5MsfgyyS4/GBJS9VP5qPwmjvWq+mXT7R8CY
-Pf1i5NNGwEo9VSKvSPKZI/zLZsKqbEDnKG9G/d2kC4Hw7elrTeygInO4vnPEVVBM
-DFmJb90b9KIaip+d+SW8kVu8vVBI0nqlvNAdXXB2OCH4S8Eu2w1S4SDPOWHlQ5cv
-uEZspfzwfy/akTlrdTQdz8+CVmNcFAgmEEI6zfidDG9EJr59IrvohBKIntBhMhcG
-SyoBqHKVMhNHWYmmmHK98bHehq6QMjMPGmz1+05KUC8Nc+1KEqp821huRfOPfo1x
-63fessf8yRa9DrE68NpIWcCLagC7h3gtVcsr6UOKIG7bmMqygrXpwMRE20huEsvN
-+0Z+1gbt+O47LBPWKMMCw4IH5VGpxf/PW/VZSewcKRcmZn2Sb+UyWz79U3PXntD+
-v2I3x35I2aZ/FP3rtCxn
-=2P2u
+iQIcBAEBCAAGBQJUr9uaAAoJELp701BxlEWfUmgP/3887fGRmkoZ8seH02Me61uP
+n2uXl+cY06bqnJ9ke0KsfPNEMGND+VYSSXmS0RO9XOs9/lR5qWjLX3LfkJd4MmhC
+y20GxiWoX0ZAyQai5stx91mOAyThwRc+7BUyA7pDA5PiUVFVjtIgZoEpYWNOQ+io
+bSnxFVitlTm2egBqV27RxR68yxo2nmxT5kuAask7zXKmXZvCNTPcAYbSO51aKy1K
+dpXHZdGtq3oWe2uJvoF0ObTb3NmRGAEZEnAP17KJUbGMGScOcLE7Ru+fexLNeaOv
+dLT4zSGxpD9KEeOGTNLjiwSN5J6G56mNsLeXEr0563a0o2xoyMBcwVvZF6EDFKPo
++hdYkmP3jOh/yrQSFyS4PV6rZWU1SefmsKi6iW5FNuWuyc+pt57H8Zb7u4Ve7DtZ
+jcMzxJWKfMktJmqEFcydy8+d/FPVDfCs6Nn8xO/Dt2nwk7AeVIUAl/JBrj/DKqru
+Dud0FlpstKnRIN2OXgzyPDNiGX9QZ2KgSFZNfDJ3tovks2Of1clw0i1N7uD7hPWr
+vueRfTR4CFgdOYki8Vdfoo3gCJst2BZqjLRHdWTU2r83Ottc8WgZelrrke/grsmo
+DUGdd60ftaDU6L3Ay9jaWtA+8Qv/F5HNmxDVDlLXGDe8lmIR66+H5fJxLim2Ww65
+N/8v50CatpdpP/IGlMz2
+=afC2
 -----END PGP SIGNATURE-----
