@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/colordiff
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/colordiff/ChangeLog,v 1.104 2014/11/14 07:03:25 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/colordiff/ChangeLog,v 1.105 2015/01/09 13:46:01 ago Exp $
+
+  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> colordiff-1.0.13-r1.ebuild:
+  Stable for amd64, wrt bug #534866
 
 *colordiff-1.0.13-r1 (14 Nov 2014)
 
